<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemShoppingAddList"
        android:title="@string/shoppingOptionAddList"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemShoppingDeleteList"
        android:title="@string/shoppingOptionDeleteList"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemShoppingRenameList"
        android:title="@string/shoppingOptionRenameList"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemShoppingClearList"
        android:title="@string/shoppingOptionClearList"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemShoppingUncheckAll"
        android:title="@string/shoppingOptionUncheckAll"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemShoppingRemoveChecked"
        android:title="@string/shoppingOptionDeleteChecked"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemShoppingUndo"
        android:icon="@drawable/ic_action_undo"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemShoppingCollapseAll"
        android:title="@string/shoppingOptionCollapseAll"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemShoppingExpandAll"
        android:title="@string/shoppingOptionExpandAll"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemShoppingSearch"
        android:icon="@drawable/ic_action_search"
        android:title=""
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
</menu>
