<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemTasksUndo"
        android:icon="@drawable/ic_action_undo"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemTasksDeleteChecked"
        android:title="@string/tasksOptionClearChecked"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemTasksClear"
        android:title="@string/tasksOptionClearList"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemTasksUncheckAll"
        android:title="@string/tasksOptionUncheckAll"
        app:showAsAction="never" />

    <!--    <item android:id="@+id/item_shopping_undo"-->
    <!--        android:title=""-->
    <!--        android:icon="@drawable/ic_action_undo"-->
    <!--        app:showAsAction="ifRoom"/>-->
</menu>
