<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemNotesUndo"
        android:icon="@drawable/ic_action_undo"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemNotesAddFolder"
        android:title="@string/notesOptionAddFolder"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemNotesDeleteFolder"
        android:title="@string/settingsNotesOptionDeleteFolder"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemNotesEditFolder"
        android:title="@string/notesEditFolder"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemNotesSearch"
        android:icon="@drawable/ic_action_search"
        android:title=""
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
</menu>
