<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOneCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsBirthdaysShowMonth"
                    android:textColor="?attr/colorOnBackGround"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/swShowMonth"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsBirthdaysShowMonthsExplanation"
                    android:textColor="?attr/colorHint"
                    app:layout_constraintStart_toStartOf="@id/tvOneCategory"
                    app:layout_constraintTop_toBottomOf="@id/tvOneCategory" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swShowMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvOneCategory" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNorth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsBirthdaysSouthColors"
                    android:textColor="?attr/colorOnBackGround"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintEnd_toStartOf="@+id/swSouthColors"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsBirthdaysSouthHint"
                    android:textColor="?attr/colorHint"
                    app:layout_constraintEnd_toEndOf="@+id/tvNorth"
                    app:layout_constraintStart_toStartOf="@id/tvNorth"
                    app:layout_constraintTop_toBottomOf="@id/tvNorth" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swSouthColors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvNorth" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPreview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsBirthdaysShowUpcoming"
                    android:textColor="?attr/colorOnBackGround"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/swPreview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tvPreview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvPreview" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clBirthdayTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBirthdayTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsBirthdaysNotificationTime"
                    android:textColor="?attr/colorOnBackGround"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBirthdayNotifTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorHint"
                    app:layout_constraintStart_toStartOf="@id/tvBirthdayTime"
                    app:layout_constraintTop_toBottomOf="@id/tvBirthdayTime" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
